tests/ui/shadowed/shadowed-use-visibility.stderr
error[E0603]: module import `bar` is private
  --> $DIR/shadowed-use-visibility.rs:10:14
   |
LL |     use foo::bar::f as g;
   |              ^^^ private module import
   |
note: the module import `bar` is defined here...
  --> $DIR/shadowed-use-visibility.rs:5:9
   |
LL |     use foo as bar;
   |         ^^^^^^^^^^
note: ...and refers to the module `foo` which is defined here
  --> $DIR/shadowed-use-visibility.rs:2:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module import `f` is private
  --> $DIR/shadowed-use-visibility.rs:16:10
   |
LL | use bar::f::f;
   |          ^ private module import
   |
note: the module import `f` is defined here...
  --> $DIR/shadowed-use-visibility.rs:12:9
   |
LL |     use foo as f;
   |         ^^^^^^^^
note: ...and refers to the module `foo` which is defined here
  --> $DIR/shadowed-use-visibility.rs:2:1
   |
LL | mod foo {
   | ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
